WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160806
message loading never finishes in Mail
https://bugs.webkit.org/show_bug.cgi?id=160806
Summary
message loading never finishes in Mail
Anders Carlsson
Reported
2016-08-12 10:44:17 PDT
message loading never finishes in Mail
Attachments
Patch
(17.26 KB, patch)
2016-08-12 10:49 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-08-12 10:49:44 PDT
Created
attachment 285918
[details]
Patch
mitz
Comment 2
2016-08-12 11:07:39 PDT
Comment on
attachment 285918
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=285918&action=review
> Source/WebKit2/ChangeLog:14 > + Handle the MACH_NOTIFY_NO_SENDERS and MACH_NOTIFY_SEND_ONCE messages here. Also, once we receive a send > + queue from the other side, stop listening for the MACH_NOTIFY_NO_SENDERS notification.
“send queue”?
> Source/WebKit2/ChangeLog:34 > + - Use mach_port_request_notification to get a notification for when our receiver right loses all its senders.
“receive right”
> Source/WebKit2/UIProcess/Launcher/mac/ProcessLauncherMac.mm:172 > + bool isWebKitDevelopmentBuild = ![[[[NSBundle bundleWithIdentifier:@"com.apple.WebKit"] bundlePath] stringByDeletingLastPathComponent] hasPrefix:systemDirectoryPath()]; > + if (isWebKitDevelopmentBuild) {
Unrelated, but we need to change this logic to use the process name, because currently it makes Safari Technology Preview builds behave like development builds.
Anders Carlsson
Comment 3
2016-08-12 11:51:33 PDT
Committed
r204414
: <
http://trac.webkit.org/changeset/204414
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug